# example-fastapi

./: .gitignore  background_tasks.py  background_tasks2.py  debugging.py  enum_example.py  oauth2_jwt.py  oauth2_pass_bearer.py  pyproject.toml
bigger/: dependencies.py  main.py
bigger/internal/: admin.py
bigger/routers/: items.py  users.py
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
