[tool.poetry]
name = "example-fastapi"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
